그래들 왜 에러가날까요..

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,8 +41,17 @@
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" >
         </activity>
-        <activity android:name=".Main2Activity" >
+
+        <activity
+            android:name=".ListPageActivity"
+            android:label="@string/title_activity_list_page"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".DetailActivity"
+            android:label="@string/title_activity_detail"
+            android:theme="@style/AppTheme.NoActionBar" >
         </activity>
+
     </application>
 
 </manifest>
