--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,9 +24,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     //compile 'com.googlecode.json-simple:json-simple:1.1.1'
+    compile project(':spinnerLibrary')
     compile 'com.google.code.gson:gson:2.4'
     compile 'com.android.support:appcompat-v7:23.1.0'
     compile 'com.android.support:design:23.1.0'
