1. 가로전환 안되도록 2. MapAcitivity --> DetailActivity로 모두 옮김 (해당하는 xml 파일도 함께 옮김) 3. Select Location --> Where to 4. 스피너 위치 아래로 옮김 (크기 조정은 좀 더 봐야함) 5. 리스트페이지: rating bar 추가 6. 상세피이지: 지도위에 반투명으로 장소이름표시 / 갤러리 / 스크롤뷰

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.klutch.kay.gangproject" >
+    package="com.klutch.kay.gangproject">
 
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
@@ -14,11 +14,12 @@
         android:icon="@mipmap/ic_launcher_fall"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar" >
+            android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -39,14 +40,15 @@
 
         <activity
             android:name=".MapsActivity"
-            android:label="@string/title_activity_maps" >
-        </activity>
-
+            android:label="@string/title_activity_maps"></activity>
         <activity
             android:name=".ListPageActivity"
             android:label="@string/title_activity_list_page"
             android:theme="@style/AppTheme.NoActionBar" />
-
+        <activity
+            android:name=".DetailActivity"
+            android:label="@string/title_activity_detail"
+            android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
 </manifest>
