1. TipListPageActivity 생성 2. DetailActivty (플로팅 액션 버튼)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
         <activity
             android:name=".DetailActivity"
             android:label="@string/title_activity_detail"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity
+            android:name=".TipListPageActivity"
+            android:label="@string/title_activity_tip_list_page"
             android:theme="@style/AppTheme.NoActionBar"></activity>
     </application>
 
